--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "backpack-core",
-  "version": "0.8.0-1",
+  "version": "0.8.0-0",
   "description": "Backpack is a minimalistic build system for Node.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/palmerhq/backpack.git"
-  },
+  "repository": "palmerhq/backpack",
   "author": "@jaredpalmer",
   "license": "MIT",
   "bugs": {
@@ -15,8 +12,9 @@
     "backpack": "./bin/backpack"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "babel-loader": "^8.0.2",
+    "@babel/core": "7.0.0-beta.39",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-loader": "v8.0.0-beta.0",
     "babel-preset-backpack": "^0.5.0",
     "cross-spawn": "^5.0.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -24,12 +22,7 @@
     "nodemon": "^1.11.0",
     "ramda": "^0.23.0",
     "source-map-support": "^0.4.15",
-    "webpack": "^3.11.0",
-    "webpack-node-externals": "^1.6.0"
-  },
-  "homepage": "https://github.com/palmerhq/backpack#readme",
-  "main": "babel.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "webpack": "^4.17.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
