--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backpack-core",
-  "version": "0.8.0-0",
+  "version": "0.8.0-2",
   "description": "Backpack is a minimalistic build system for Node.js",
   "repository": "palmerhq/backpack",
   "author": "@jaredpalmer",
@@ -12,17 +12,16 @@
     "backpack": "./bin/backpack"
   },
   "dependencies": {
-    "@babel/core": "7.0.0-beta.39",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "v8.0.0-beta.0",
-    "babel-preset-backpack": "^0.5.0",
+    "@babel/core": "^7.1.0",
+    "babel-loader": "^8.0.2",
+    "babel-preset-backpack": "^0.8.0-0",
     "cross-spawn": "^5.0.1",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "json-loader": "^0.5.7",
     "nodemon": "^1.11.0",
     "ramda": "^0.23.0",
     "source-map-support": "^0.4.15",
-    "webpack": "^4.17.1",
+    "webpack": "^4.19.1",
     "webpack-node-externals": "^1.7.2"
   }
 }
